<?xml version="1.0"?>
<package format="3">
  <name>vdb_gpdf</name>
  <version>1.0.0</version>
  <description>ROS wrapper for the vdb gpdf library</description>

  <maintainer email="Lan.Wu-2@uts.edu.au">Lan Wu</maintainer>
  <license>GPL3.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>eigen_conversions</depend>

  <export>
    <!-- ROS2 specific exports can go here -->
  </export>
</package>

