<?xml version="1.0"?>
<package format="2">
  <name>vdb_gpdf_ros</name>
  <version>1.0.0</version>
  <description>The vdb_gpdf_mapping ROS1 package</description>
  <maintainer email="Lan.Wu-2@uts.edu">Lan Wu</maintainer>
  <license>GPL3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>message_runtime</depend>
  <depend>message_filters</depend>

  <depend>pcl_ros</depend>

  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>

  <depend>glog</depend>
  <depend>gflags</depend>
  <depend>eigen_conversions</depend>
  <depend>vdb_gpdf_mapping_msgs</depend>
  <depend>vdb_gpdf</depend>
  <depend>minkindr</depend>

  <export>
  </export>

</package>