<?xml version="1.0"?>
<package format="3">
  <name>vdb_gpdf_mapping</name>
  <version>1.0.0</version>
  <description>The vdb_gpdf_mapping ROS2 package</description>
  <maintainer email="Lan.Wu-2@uts.edu">Lan Wu</maintainer>
  <license>GPL3.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>PCL</depend>
  <depend>glog</depend>
  <depend>Eigen3</depend>
  <depend>vdb_gpdf</depend>
  <depend>vdb_gpdf_mapping_msgs</depend>
  <depend>minkindr</depend>
  <depend>eigen_conversions</depend>
  <depend>gflags</depend>
  <depend>pcl_conversions</depend>

  <!-- Build dependencies -->
  <build_depend>ament_cmake</build_depend>
  <build_depend>pcl_ros</build_depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_lint</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
