<?xml version="1.0"?>
<package format="3">
  <name>vdb_gpdf_mapping_msgs</name>
  <version>1.0.0</version>
  <description>Utilities to setup and run data for vdb gpdf mapping</description>

  <maintainer email="Lan.Wu-2@uts.edu.au">Lan_Wu</maintainer>
  <license>GPL3.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Add this line -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
