<?xml version="1.0"?>
<package format="2">
  <name>vdb_gpdf_msgs</name>
  <version>1.0.0</version>
  <description>Utilities to setup and run data for vdb gpdf mapping </description>

  <maintainer email="Lan.Wu-2@uts.edu.au">Lan_Wu</maintainer>
  <license>GPL3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
