<?xml version="1.0"?>
<package format="3">
  <name>minkindr</name>
  <version>1.0.0</version>
  <description>minkindr</description>

  <maintainer email="paul.furgale@gmail.com">Paul Furgale</maintainer>
  <license>BSD</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>eigen_conversions</depend>
  <depend>glog</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf_conversions</depend>

  <!-- Test dependencies (optional) -->
  <test_depend>ament_lint</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend> 
  
  <export>
    <!-- Any ROS2 specific exports can go here -->
  </export>
</package>

